atualização de carregamento do css

--- a/arquivos/style.css
+++ b/arquivos/style.css
@@ -6,6 +6,9 @@
 :root{
     --font-principal: 'Poppins', sans-serif;
 }
+body{
+    display: none;
+}
 body::before {
     content: '';
     position: fixed;
