--- a/arquivos/style.css
+++ b/arquivos/style.css
@@ -18,7 +18,7 @@ body::before {
     left: 0;
     z-index: -1; /* Coloca o pseudo-elemento atrás dos outros elementos */
     background-image: url('imagens/zyro-image.png');
-    background-size: 100%;
+    background-size: cover;
     background-position: bottom center;
     background-attachment: fixed;
     filter: brightness(0.7);
@@ -274,7 +274,7 @@ header{
     }
     body::before{
         background-image: url('imagens/BackgroundPequenaIT.png');
-        background-size: 150%;
+        background-size: cover;
     }
     #marcadores{
         display: none;
